multiple tests failing with -Xcomp after JDK-8290034

XMLWordPrintable

    • b09
    • 20
    • b13
    • x86_64
    • Verified

      java/lang/Long/BitTwiddle.java:

      java.lang.RuntimeException: lzx: 1
      at BitTwiddle.main(BitTwiddle.java:107)
      at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
      at java.base/java.lang.reflect.Method.invoke(Method.java:578)
      at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:312)
      at java.base/java.lang.Thread.run(Thread.java:1589)

      java/util/zip/TestCRC32C.java:

      java.lang.RuntimeException: Calculated checksum result was invalid. Expected e3069283, but got fa64cc41.
      at ChecksumBase.checkChecksum(ChecksumBase.java:92)
      at ChecksumBase.testBytes(ChecksumBase.java:56)
      at ChecksumBase.testAll(ChecksumBase.java:37)
      at TestCRC32C.main(TestCRC32C.java:37)
      at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
      at java.base/java.lang.reflect.Method.invoke(Method.java:578)
      at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:312)
      at java.base/java.lang.Thread.run(Thread.java:1589)

      java/util/zip/TestChecksum.java:
      java.lang.RuntimeException: Calculated checksum result was invalid. Expected e3069283, but got fa64cc41.
      at ChecksumBase.checkChecksum(ChecksumBase.java:92)
      at ChecksumBase.testBytes(ChecksumBase.java:56)
      at ChecksumBase.testAll(ChecksumBase.java:37)
      at TestChecksum.main(TestChecksum.java:35)
      at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
      at java.base/java.lang.reflect.Method.invoke(Method.java:578)
      at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:312)
      at java.base/java.lang.Thread.run(Thread.java:1589)

            Assignee:
            Jatin Bhateja
            Reporter:
            Dean Long
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: