8291649: multiple tests failing with -Xcomp after JDK-8290034